{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 10,
  "lineage": "138f1748-9282-8f34-2a5e-9693f5c1d46c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ib_trading_net_allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-11-22T10:40:55.359-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/api-project-786272790820/global/firewalls/ib-trading-net-allow-internal-dev",
            "log_config": [],
            "name": "ib-trading-net-allow-internal-dev",
            "network": "https://www.googleapis.com/compute/v1/projects/api-project-786272790820/global/networks/ib-trading-net-dev",
            "priority": 1000,
            "project": "api-project-786272790820",
            "self_link": "https://www.googleapis.com/compute/v1/projects/api-project-786272790820/global/firewalls/ib-trading-net-allow-internal-dev",
            "source_ranges": [
              "10.172.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.ib_trading_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ib_trading_net_allow_ssh_bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-22T10:40:55.034-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/api-project-786272790820/global/firewalls/ib-trading-net-allow-ssh-bastion-host-dev",
            "log_config": [],
            "name": "ib-trading-net-allow-ssh-bastion-host-dev",
            "network": "https://www.googleapis.com/compute/v1/projects/api-project-786272790820/global/networks/ib-trading-net-dev",
            "priority": 1000,
            "project": "api-project-786272790820",
            "self_link": "https://www.googleapis.com/compute/v1/projects/api-project-786272790820/global/firewalls/ib-trading-net-allow-ssh-bastion-host-dev",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastion-host-dev"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.ib_trading_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20221102",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/api-project-786272790820/zones/europe-southwest1-a/disks/bastion-host-dev"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/api-project-786272790820/zones/europe-southwest1-a/instances/bastion-host-dev",
            "instance_id": "1470268811567474977",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "startup-script": "#!/bin/bash\nsudo apt-get -y install kubectl git\ngcloud container clusters get-credentials ib-trading --zone europe-southwest1-a --internal-ip\n\n"
            },
            "metadata_fingerprint": "kWzftsumoLg=",
            "name": "bastion-host-dev",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/api-project-786272790820/global/networks/ib-trading-net-dev",
                "network_ip": "10.172.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/api-project-786272790820/regions/europe-southwest1/subnetworks/ib-trading-subnet-dev",
                "subnetwork_project": "api-project-786272790820"
              }
            ],
            "project": "api-project-786272790820",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/api-project-786272790820/zones/europe-southwest1-a/instances/bastion-host-dev",
            "service_account": [
              {
                "email": "786272790820-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/servicecontrol",
                  "https://www.googleapis.com/auth/source.read_only"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion-host-dev"
            ],
            "tags_fingerprint": "-YfItlBOizo=",
            "zone": "europe-southwest1-a"
          },
          "dependencies": [
            "google_compute_network.ib_trading_net",
            "google_compute_subnetwork.ib_trading_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "ib_trading_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/api-project-786272790820/global/networks/ib-trading-net-dev",
            "mtu": 0,
            "name": "ib-trading-net-dev",
            "project": "api-project-786272790820",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/api-project-786272790820/global/networks/ib-trading-net-dev"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-22T10:40:55.387-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/api-project-786272790820/regions/europe-southwest1/routers/nat-router-dev",
            "name": "nat-router-dev",
            "network": "https://www.googleapis.com/compute/v1/projects/api-project-786272790820/global/networks/ib-trading-net-dev",
            "project": "api-project-786272790820",
            "region": "europe-southwest1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/api-project-786272790820/regions/europe-southwest1/routers/nat-router-dev"
          },
          "dependencies": [
            "google_compute_network.ib_trading_net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_config",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "api-project-786272790820/europe-southwest1/nat-router-dev/nat-config-dev",
            "log_config": [
              {
                "enable": true,
                "filter": "ALL"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat-config-dev",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "api-project-786272790820",
            "region": "europe-southwest1",
            "router": "nat-router-dev",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.ib_trading_net",
            "google_compute_router.nat_router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "ib_trading_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-22T10:40:55.889-08:00",
            "gateway_address": "10.172.0.1",
            "id": "projects/api-project-786272790820/regions/europe-southwest1/subnetworks/ib-trading-subnet-dev",
            "ip_cidr_range": "10.172.0.0/20",
            "name": "ib-trading-subnet-dev",
            "network": "https://www.googleapis.com/compute/v1/projects/api-project-786272790820/global/networks/ib-trading-net-dev",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "api-project-786272790820",
            "purpose": "PRIVATE",
            "region": "europe-southwest1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.48.0.0/14",
                "range_name": "gke-ib-trading-dev-pods-5d6ecd4a"
              },
              {
                "ip_cidr_range": "10.52.0.0/20",
                "range_name": "gke-ib-trading-dev-services-5d6ecd4a"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/api-project-786272790820/regions/europe-southwest1/subnetworks/ib-trading-subnet-dev",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.ib_trading_net"
          ]
        }
      ]
    }
  ]
}